alperen.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alperen-deployment
  labels:
    app: alperen
spec:
  replicas: 2
  selector:
    matchLabels:
      app: alperen
  template:
    metadata:
      labels:
        app: alperen
    spec:
      containers:
      - name: alperen
        image: nginx:1.25
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: alperen-service
spec:
  selector:
    app: alperen
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
